code/force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/FinServ__DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>FinServ__DocumentNumber__c</fullName>
    <label>Document Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>