code/force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/FinServ__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>