code/force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/FinServ__IssueDate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__IssueDate__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>