code/force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/FinServ__IssuingCountry__c.field-meta.xml
<CustomField>
    <fullName>FinServ__IssuingCountry__c</fullName>
    <label>Issuing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>