code/force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/FinServ__VerifiedBy__c.field-meta.xml
<CustomField>
    <fullName>FinServ__VerifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IdentificationDocument</relationshipName>
    <type>Lookup</type>
</CustomField>