code/force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/FinServ__VerifiedOn__c.field-meta.xml
<CustomField>
    <fullName>FinServ__VerifiedOn__c</fullName>
    <label>Verified On</label>
    <type>DateTime</type>
</CustomField>